--- a/src/resources/scss/settings/_settings.scss
+++ b/src/resources/scss/settings/_settings.scss
@@ -62,7 +62,7 @@ $min-height: 48px;
 
 //SECTION SIZES
 $section-left-width: 800px;
-$section-right-width: 600px;
+$section-right-width: 580px;
 $section-right-icon-small: 100%;
 $section-right-icon-medium: 50%;
 $section-right-icon-large: 30%;
